--- a/SynoCastNET.csproj
+++ b/SynoCastNET.csproj
@@ -13,18 +13,18 @@
     </Content>
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="YoutubeExplode" Version="6.5.6" />
-  </ItemGroup>
-
 	<PropertyGroup>
-		<VersionPrefix>1.2.0</VersionPrefix>
+		<VersionPrefix>1.3.0</VersionPrefix>
 		<SourceRevisionId>buildUTC$([System.DateTime]::UtcNow.ToString("yyyy-MM-dd, HH:mm:ss"))</SourceRevisionId>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="AngleSharp" Version="1.4.0" />
+	</ItemGroup>
+
   <ItemGroup>
-    <Reference Include="AngleSharp">
-      <HintPath>libs\AngleSharp.dll</HintPath>
+    <Reference Include="YoutubeExplode">
+      <HintPath>libs\YoutubeExplode.dll</HintPath>
     </Reference>
   </ItemGroup>
 
